fix: link and align fixed

--- a/static/css/_take-deriv.scss
+++ b/static/css/_take-deriv.scss
@@ -45,7 +45,12 @@ $white :#fff;
         padding-top: 33px;
         max-width: 424px;
 
+        @media (max-width: 1113px) {
+            padding-top: 15px;
+        }
+
         @include for-size(mobile) {
+            padding-top: 24px;
             display: flex;
             flex-direction: column;
             text-align: center;
